--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./spartan-lib
+      working-directory: ./spartan_lib
   win:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./spartan-lib
+      working-directory: ./spartan_lib
