--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test library
+name: Test workspace
 
 on:
   push:
@@ -15,11 +15,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./spartan_lib
   win:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./spartan_lib
