--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,9 +13,9 @@ jobs:
     - name: Build documentation
       run: cargo doc --all --no-deps
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: docs
+        publish_branch: gh-pages
         publish_dir: ./target/doc
         force_orphan: true
