--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -26,6 +26,9 @@ version = "0.4"
 [dependencies.serde]
 version = "1.0"
 
+[dependencies.bincode]
+version = "1.2"
+
 [dependencies.toml]
 version = "0.5"
 
@@ -38,3 +41,6 @@ features = ["v4"]
 
 [dependencies.derive-new]
 version = "0.5"
+
+[dependencies.anyhow]
+version = "1.0"
