--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -13,6 +13,9 @@ version = "2.0"
 [dependencies.actix-rt]
 version = "1.1"
 
+[dependencies.actix-service]
+version = "1.0"
+
 [dependencies.tokio]
 version = "0.2"
 features = ["macros", "rt-threaded", "fs"]
