--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies.spartan_lib]
 path = "../spartan_lib"
 
+[dependencies.actix]
+version = "0.9"
+
 [dependencies.actix-web]
 version = "2.0"
 
@@ -15,6 +18,9 @@ version = "1.1"
 
 [dependencies.actix-service]
 version = "1.0"
+
+[dependencies.actix-raft]
+version = "0.4"
 
 [dependencies.tokio]
 version = "0.2"
