--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             toolchain: nightly
+            override: true
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
@@ -29,6 +30,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
             toolchain: nightly
+            override: true
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
