Added TCP stream wrapper, move replication job into submodule

--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -18,7 +18,7 @@ version = "1.0"
 
 [dependencies.tokio]
 version = "0.2"
-features = ["macros", "rt-threaded", "fs"]
+features = ["macros", "rt-threaded", "fs", "tcp"]
 
 [dependencies.structopt]
 version = "0.3"
