--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -64,5 +64,8 @@ features = ["serde"]
 [dependencies.tokio-util]
 version = "0.3"
 
+[dependencies.itertools]
+version = "0.9"
+
 [dev-dependencies.tempfile]
 version = "3.1"
