--- a/spartan/Cargo.toml
+++ b/spartan/Cargo.toml
@@ -4,68 +4,31 @@ version = "0.5.0"
 authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
 edition = "2018"
 
-[dependencies.spartan_lib]
-path = "../spartan_lib"
+[dependencies]
+spartan_lib = { path = "../spartan_lib" }
+actix-web = { version = "2.0" }
+actix-rt = { version = "1.1" }
+actix-service = { version = "1.0" }
+structopt = { version = "0.3" }
+log = { version = "0.4" }
+pretty_env_logger = { version = "0.4" }
+serde = { version = "1.0" }
+bincode = { version = "1.3" }
+toml = { version = "0.5" }
+thiserror = { version = "1.0" }
+anyhow = { version = "1.0" }
+futures-util = { version = "0.3" }
+once_cell = { version = "1.4" } 
+tokio-util = { version = "0.3" }
+itertools = { version = "0.9" }
 
-[dependencies.actix-web]
-version = "2.0"
-
-[dependencies.actix-rt]
-version = "1.1"
-
-[dependencies.actix-service]
-version = "1.0"
+[dev-dependencies]
+tempfile = { version = "3.1" }
 
 [dependencies.tokio]
 version = "0.2"
 features = ["macros", "rt-threaded", "fs", "tcp"]
 
-[dependencies.structopt]
-version = "0.3"
-
-[dependencies.log]
-version = "0.4"
-
-[dependencies.pretty_env_logger]
-version = "0.4"
-
-[dependencies.serde]
-version = "1.0"
-
-[dependencies.bincode]
-version = "1.3"
-
-[dependencies.toml]
-version = "0.5"
-
-[dependencies.thiserror]
-version = "1.0"
-
-[dependencies.uuid]
-version = "0.8"
-features = ["v4"]
-
-[dependencies.derive-new]
-version = "0.5"
-
-[dependencies.anyhow]
-version = "1.0"
-
-[dependencies.futures-util]
-version = "0.3"
-
-[dependencies.once_cell]
-version = "1.4"
-
 [dependencies.maybe-owned]
 version = "0.3"
 features = ["serde"]
-
-[dependencies.tokio-util]
-version = "0.3"
-
-[dependencies.itertools]
-version = "0.9"
-
-[dev-dependencies.tempfile]
-version = "3.1"
