--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ tempfile = { version = "3.1" }
 
 [dependencies.tokio]
 version = "0.2"
-features = ["macros", "rt-threaded", "fs", "tcp"]
+features = ["macros", "rt-threaded", "fs", "tcp", "sync"]
 
 [dependencies.maybe-owned]
 version = "0.3"
