Fix disabled replication feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ futures-util = { version = "0.3" }
 once_cell = { version = "1.4" } 
 tokio-util = { version = "0.3", optional = true }
 itertools = { version = "0.9", optional = true }
+cfg-if = { version = "0.1" }
 
 [dev-dependencies]
 tempfile = { version = "3.1" }
